Fix centering on menu in header (style.css change) (#12)
* Update style.css to change .menu padding to 0px

Since menu li items normally add padding, it off-centers the menu. Changing padding to 0px fixes this.

* split the two CSS rules

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,6 +6,7 @@ body {
 }
 
 /* header and footer areas */
+.menu { padding: 0; }
 .menu li { display: inline-block; }
 .article-meta, .menu a {
   text-decoration: none;
